Fix text overflow bug in filter tag boxes

--- a/app/assets/stylesheets/search_sidebar.scss
+++ b/app/assets/stylesheets/search_sidebar.scss
@@ -39,6 +39,11 @@
     text-overflow: ellipsis;
     max-width: 90%;
     vertical-align: bottom;
+    overflow-x: hidden;
+
+    &::-webkit-scrollbar {
+      width: 0 !important;
+    }
   }
 
   i {
